# aethos-linux

./: .gitignore  .gitmodules  6oiapdqkhl10guaiktjuihrggdu9qasg  9gi1kchknsp2vnccslrss3bnqfprdvok.darc  AGENTS.md  Cargo.toml  README.md  build.rs  docker-compose.e2e.yml  manifest
.beads/: config.yaml  metadata.json
.beads/hooks/: pre-commit  pre-merge-commit  pre-push
.github/workflows/: e2e-gui-network.yml  release-binaries.yml  tauri-spike-bundles.yml
docs/: milestone-5-kickoff-review.md  project-charter.md  tauri-cutover-checklist.md
docs/adr/: 0001-cross-platform-gui-direction-tauri.md  0002-tauri-rewrite-migration-plan.md
docs/beads/multi-bearer-encounter/: README.md  ac-mbe-01-audit-current-desktop-encounter-paths.md  ac-mbe-02-rust-adoption-of-canonical-bearer-orchestration-models.md  ac-mbe-03-desktop-encounter-manager-integration-plan.md  ac-mbe-04-discovery-bootstrap-bearer-adoption-plan.md  ac-mbe-05-transfer-bearer-upgrade-downgrade-plan.md  ac-mbe-06-desktop-telemetry-diagnostics-explainability-plan.md  ac-mbe-07-mixed-bearer-fixture-consumption-plan.md  ac-mbe-08-mixed-bearer-integration-test-plan.md  ac-mbe-09-cutover-and-cleanup-plan.md  execution-queue.md
docs/design/: art-style-reference.md  encounter-routing-shadow-mode.md
docs/tauri/: wayfarer-payload-contract-conformance.md
docs/testing/: gui-network-e2e.md  relay-smoke.md
scripts/: dev.sh  install.ps1  install.sh
scripts/e2e/: index_artifacts.py  pre-merge-gate.sh  run-scenario.sh  summarize_logs.py  toxiproxy_apply.py
scripts/hooks/: pre-merge-commit  pre-push
scripts/release/: create-prerelease.sh  create-release.sh
spikes/tauri-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
spikes/tauri-desktop/e2e/: package-lock.json  package.json
spikes/tauri-desktop/e2e/scripts/: doctor.mjs  generate-aethos-large-png.mjs  inspect-wayfarer-receiver.mjs  preflight.mjs
spikes/tauri-desktop/e2e/test/: dual-instance.mjs
spikes/tauri-desktop/src/: App.jsx  index.css
spikes/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-desktop/src-tauri/capabilities/: default.json
spikes/tauri-desktop/src-tauri/icons/: icon.icns
spikes/tauri-desktop/src-tauri/src/: app_state.rs  main.rs  media_v1.rs
src/: main.rs
src/aethos_core/: ble_discovery.rs  encounter_orchestration.rs  encounter_scheduler.rs  gossip_sync.rs  identity_store.rs  logging.rs  mod.rs  protocol.rs
src/relay/: client.rs
test-data/gossip-v1/: envelope_vectors.json
test-data/routing/encounter-ranking/: GUIDE.md  VERSIONING.md  blink-encounter-priority.json  durable-allocates-cargo-without-starving-control.json  manifest.json  media-starvation-guard-short-budget.json  receipt-checkpoint-protection.json  repeated-run-stability-mixed-ties.json  same-tier-exact-tie-itemid-determinism.json  schema.json  short-drain-messages-before-attachments.json  transit-vs-direct-tier-precedence.json
tests/e2e-harness/config/: toxiproxy.json
tests/e2e-harness/relay/: mock_relay.py
(+13 files in other folders)
