[package]
name = "aethos-linux"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "aethos"
path = "src/main.rs"

[dependencies]
gtk4 = "0.8"
glib = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
