[package]
name = "aethos-linux"
version = "0.11.2"
edition = "2021"

[[bin]]
name = "aethos"
path = "src/main.rs"

[[bin]]
name = "relay-smoke"
path = "src/bin/relay-smoke.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
serde_bytes = "0.11"
url = "2"
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
